- Fixed bug #33242 (Mangled error message when stream fails).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@187751 c90b9560-bf6c-de11-be94-00142212c4b1